# Chasm-Reverse

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  PanzerChasm task list.txt  README.md  default_PanzerChasm.cfg
.github/workflows/: cmake.yml
Archive-Depacker/: main.cpp
ArchiveDepacker/: ArchiveDepacker.pro  main.cpp
BlendtabAnalyzer/: main.cpp
CarToTGAConverter/: main.cpp
Cel-Converter/: main.cpp
CelDepacker/: CelDepacker.pro  main.cpp
Common/: Common.pri  files.cpp  files.hpp  tga.cpp
FloorsExtractor/: main.cpp
MapToTGAConverter/: MapToTGAConverter.pro  main.cpp
MapViewer/: MapViewer.pro  camera_controller.cpp  camera_controller.hpp  main.cpp  map_viewer.cpp  map_viewer.hpp  math_utils.hpp  model.cpp  model.hpp  vfs.cpp  vfs.hpp
ObjToTGAConverter/: ObjToTGAConverter.pro  main.cpp
PaletteExtractor/: main.cpp
PanzerChasm/: CMakeLists.txt  PanzerChasm.pro  PanzerChasm.rc  assert.hpp  commands_processor.cpp  commands_processor.hpp  connection_info.hpp  console.cpp  console.hpp  drawers.cpp  drawers.hpp  drawers_factory_gl.cpp  drawers_factory_gl.hpp  drawers_factory_soft.cpp  fwd.hpp  game_constants.hpp  game_resources.cpp  game_resources.hpp  host.cpp  host.hpp  host_commands.hpp  i_connection.hpp  i_menu_drawer.hpp  i_text_drawer.hpp  images.cpp  images.hpp  log.cpp  log.hpp  loopback_buffer.cpp  loopback_buffer.hpp  main.cpp  map_loader.cpp  map_loader.hpp  math_utils.cpp  math_utils.hpp  menu.cpp  menu.hpp  menu_drawer.cpp  menu_drawer.hpp  menu_drawer_gl.cpp  (+53 more)
PanzerChasm/client/: animations_buffer.cpp  animations_buffer.hpp  client.cpp  client.hpp  cutscene_player.cpp  cutscene_player.cpp.autosave  cutscene_player.hpp  cutscene_script.cpp  cutscene_script.hpp  demo_recorder.cpp  demo_recorder.hpp  fwd.hpp  hud_drawer.cpp  hud_drawer.hpp  hud_drawer_base.cpp  hud_drawer_base.hpp  hud_drawer_gl.cpp  hud_drawer_gl.hpp  hud_drawer_soft.cpp  hud_drawer_soft.hpp  i_hud_drawer.hpp  i_map_drawer.hpp  i_minimap_drawer.hpp  map_drawer.cpp  map_drawer.hpp  map_drawer_gl.cpp  map_drawer_gl.hpp  map_drawer_soft.cpp  map_drawer_soft.hpp  map_drawers_common.cpp  map_drawers_common.hpp  map_light.cpp  map_light.hpp  map_light.hpp.autosave  map_state.cpp  map_state.hpp  minimap_drawer.cpp  minimap_drawer.hpp  minimap_drawer_gl.cpp  minimap_drawer_gl.hpp  (+8 more)
PanzerChasm/client/opengl_renderer/: map_light.hpp  models_textures_corrector.hpp
PanzerChasm/client/software_renderer/: fixed.hpp  map_bsp_tree.cpp  map_bsp_tree.hpp  map_bsp_tree.inl  rasterizer.cpp  rasterizer.hpp  rasterizer.inl  surfaces_cache.cpp  surfaces_cache.hpp
PanzerChasm/net/: net.cpp  net.hpp
PanzerChasm/server/: a_code.hpp  backpack.hpp  collision_index.cpp  collision_index.hpp  collision_index.inl  collisions.cpp  collisions.hpp  fwd.hpp  i_connections_listener.hpp  map.cpp  map.hpp  map_save_load.cpp  monster.cpp  monster.hpp  monster_base.cpp  monster_base.hpp  movement_restriction.cpp  movement_restriction.hpp  player.cpp  player.hpp  rand.cpp  rand.hpp  server.cpp  server.hpp
PanzerChasm/sound/: ambient_sound_processor.cpp  ambient_sound_processor.hpp  channel.hpp  driver.cpp  driver.hpp  sound_engine.cpp  sound_engine.hpp  sound_id.hpp  sounds_loader.cpp  sounds_loader.hpp
docs/: Arhitektura setevogo vzaimodejstvija.txt  CSM_EDIT.TXT  Konsoljnyje komandy.txt  Monsters animations.txt  O povedenii monstrov.txt  Opisanije fajlov.txt  Oçenka rabot po vossazdaniju igrovogo koda s nulä.txt  Porädok zagruzki.txt  Projekt sistemy sovescenija.txt  Razbor binarnyh fajlov igry.txt  Tehniceskije dostoinstva i nedostatki originaljnoj igry.txt  csm.bin format.txt  floors.xx format.txt  format .car modelej.txt  format kart.txt  format modelej.txt  format sprajtov.txt  gibs.txt  rabota skriptovyh sçen.txt
shaders/: ambient_light_f.glsl  constants.glsl  floors_f.glsl  floors_v.glsl  fullscreen_blend_f.glsl  fullscreen_blend_v.glsl  hud_f.glsl  hud_v.glsl  light_f.glsl  light_v.glsl  menu_f.glsl  menu_picture_v.glsl  menu_v.glsl  minimap_f.glsl  minimap_v.glsl  models_f.glsl  models_g.glsl  models_shadow_f.glsl  models_shadow_v.glsl  models_v.glsl  monsters_f.glsl  monsters_g.glsl  monsters_v.glsl  shadowmap_f.glsl  shadowmap_g.glsl  shadowmap_v.glsl  single_texture_models_f.glsl  sky_f.glsl  sky_v.glsl  sprites_f.glsl  sprites_v.glsl  text_f.glsl  texture_copy_f.glsl  texture_copy_v.glsl  walls_ambient_light_f.glsl  walls_f.glsl  walls_light_f.glsl  walls_light_v.glsl  walls_v.glsl
shaders/static_light/: floors_f.glsl  models_f.glsl  models_v.glsl  monsters_f.glsl  monsters_v.glsl  sprites_v.glsl  walls_f.glsl  walls_v.glsl
src/: commands_processor.hpp  connection_info.cpp  drawers_factory_gl.cpp  drawers_factory_soft.hpp  game_resources.cpp  game_resources.hpp  host.cpp  host.hpp  host_commands.hpp  i_drawers_factory.hpp  i_menu_drawer.hpp  i_text_drawer.hpp  images.cpp  key_checker.cpp  key_checker.hpp  loopback_buffer.cpp  loopback_buffer.hpp  main.cpp  map_loader.cpp  math_utils.cpp  math_utils.hpp  menu.cpp  menu_drawer_gl.cpp  menu_drawer_gl.hpp  menu_drawers_common.hpp  messages.cpp  messages_extractor.cpp  messages_extractor.hpp  messages_extractor.inl  messages_list.h  messages_sender.hpp  model.cpp  model.hpp  program_arguments.cpp  program_arguments.hpp  rand.cpp  rand.hpp  rendering_context.hpp  save_load.cpp  save_load.hpp  (+15 more)
src/client/: client.cpp  client.hpp  cutscene_player.hpp  cutscene_script.cpp  hud_drawer_gl.cpp  hud_drawer_soft.hpp  i_hud_drawer.hpp  i_map_drawer.hpp  i_minimap_drawer.hpp  map_drawer_gl.cpp  map_drawer_soft.hpp  map_drawers_common.hpp  map_state.cpp  minimap_drawer_gl.hpp  minimap_state.hpp  movement_controller.cpp  movement_controller.hpp  weapon_state.cpp
src/common/: files.cpp  files.hpp  palette.cpp  palette.hpp  str.cpp  str.hpp  tga.cpp  tga.hpp
src/net/: net.cpp  net.hpp
src/panzer_ogl_lib/: .gitignore  bbox.hpp  buffer_texture.cpp  buffer_texture.hpp  framebuffer.cpp  framebuffer.hpp  func_addresses.cpp  func_declarations.hpp  functions_list.h  glsl_program.cpp  glsl_program.hpp  matrix.cpp  (+12 more)
tools/: convert_textures.py
(+25 files in other folders)
